# another_assignment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
crud/: crud.py
db/: db.py
model/: model.py
routers/: routers.py
schema/: users.py
